[gd_scene load_steps=17 format=2]

[ext_resource path="res://GameOverTab.gd" type="Script" id=1]
[ext_resource path="res://GameOverSpriteSheet.png" type="Texture" id=2]
[ext_resource path="res://Screenshot_1.png" type="Texture" id=3]
[ext_resource path="res://FastFoodEmUp-Assets/UI-Buttons/No (1).png" type="Texture" id=4]
[ext_resource path="res://FastFoodEmUp-Assets/UI-Buttons/NoPressed (1).png" type="Texture" id=5]
[ext_resource path="res://PixelFont.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://FastFoodEmUp-Assets/UI-Buttons/YesPressed (1).png" type="Texture" id=7]
[ext_resource path="res://FastFoodEmUp-Assets/UI-Buttons/Yes (1).png" type="Texture" id=8]
[ext_resource path="res://SOUND_EFFECTS/SFX/GAME_OVER_SOUND.wav" type="AudioStream" id=9]
[ext_resource path="res://SOUND_EFFECTS/SFX/BUTTON_SOUND.wav" type="AudioStream" id=10]

[sub_resource type="DynamicFont" id=3]
size = 55
font_data = ExtResource( 6 )

[sub_resource type="Animation" id=1]
resource_name = "GameOverRelease"
length = 0.8
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.55, 0.6, 0.65, 0.7, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.55 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite/Restart:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.75 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite/Continue:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.75 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite/Restart:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite/Continue:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="DynamicFont" id=4]
size = 300
outline_size = 15
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("COUNT_DOWN:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "3" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("COUNT_DOWN:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("COUNT_DOWN:rect_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1.1, 1.1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "count_down"
length = 3.0
step = 0.005
tracks/0/type = "value"
tracks/0/path = NodePath("COUNT_DOWN:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ "3", "2
", "1
", "0" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("COUNT_DOWN:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("BUTTON_SOUND_PLAYER")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1, 2, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
}, {
"args": [ 0.0 ],
"method": "play"
}, {
"args": [ 0.0 ],
"method": "play"
}, {
"args": [ 0.0 ],
"method": "play"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("COUNT_DOWN:rect_scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 1, 1.05, 1.1, 2, 2.05, 2.1, 3, 3.05, 3.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.1, 1.1 ), Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 1.1, 1.1 ), Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 1.1, 1.1 ), Vector2( 1, 1 ) ]
}

[node name="GameOverTab" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="Shadow" type="Sprite" parent="."]
self_modulate = Color( 0.027451, 0.0235294, 0.0235294, 0.498039 )
position = Vector2( 360, 640 )
texture = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( 360, 577 )
texture = ExtResource( 2 )
hframes = 5

[node name="Restart" type="TextureButton" parent="Sprite"]
pause_mode = 2
visible = false
margin_left = -86.0
margin_top = 136.0
margin_right = 141.0
margin_bottom = 259.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
expand = true

[node name="Label" type="Label" parent="Sprite/Restart"]
margin_left = 9.0
margin_top = 29.0
margin_right = 233.0
margin_bottom = 106.0
custom_fonts/font = SubResource( 3 )
text = "Restart"

[node name="Continue" type="TextureButton" parent="Sprite"]
pause_mode = 2
visible = false
modulate = Color( 1, 1, 1, 0.4 )
self_modulate = Color( 0.796078, 0.796078, 0.796078, 1 )
margin_left = -184.0
margin_top = -80.0
margin_right = 180.0
margin_bottom = 53.0
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 7 )
expand = true

[node name="Label" type="Label" parent="Sprite/Continue"]
margin_left = 54.0
margin_top = 29.0
margin_right = 302.0
margin_bottom = 106.0
custom_fonts/font = SubResource( 3 )
text = "CONTINUE"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/GameOverRelease = SubResource( 1 )
anims/RESET = SubResource( 2 )

[node name="GAME_OVER" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = 20.0
pitch_scale = 0.7

[node name="BUTTON_SOUND_PLAYER" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[node name="COUNT_DOWN" type="Label" parent="."]
visible = false
modulate = Color( 1, 0.792157, 0, 1 )
self_modulate = Color( 1.5, 1.5, 1.5, 1 )
margin_left = 230.0
margin_top = 346.0
margin_right = 527.0
margin_bottom = 685.0
rect_scale = Vector2( 1.1, 1.1 )
custom_fonts/font = SubResource( 4 )
text = "3"
align = 1

[node name="COUNT_DOWN_ANIMATION" type="AnimationPlayer" parent="COUNT_DOWN"]
root_node = NodePath("../..")
anims/RESET = SubResource( 6 )
anims/count_down = SubResource( 5 )

[connection signal="pressed" from="Sprite/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="Sprite/Continue" to="." method="_on_Continue_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_finished" from="COUNT_DOWN/COUNT_DOWN_ANIMATION" to="." method="_on_COUNT_DOWN_ANIMATION_animation_finished"]
